fix: extra space on bottom

--- a/milane/src/app/globals.css
+++ b/milane/src/app/globals.css
@@ -196,10 +196,11 @@ body {
   font-weight: var(--weight-regular);
   line-height: var(--lineHeight-5);
   overflow: hidden;
-  height: 300vh;
+  
   font-family: "Forum", serif;
   font-weight: 400;
   font-style: normal;
+  height: fit-content;
 }
 
 body.loaded {
